--- a/.env
+++ b/.env
@@ -6,3 +6,11 @@ REACT_APP_FRONTEND_URL=http://localhost:3001
 #PROD
 #BACKEND_URL=https://realestate.onrender.com
 #REACT_APP_FRONTEND_URL=http://GITHUB PAGES
+
+#ENDPOINTS
+REACT_APP_ENDPOINT_LOGIN=/api/auth/login
+REACT_APP_ENDPOINT_REGISTER=/api/auth/register
+REACT_APP_ENDPOINT_PROPERTY=/api/property
+REACT_APP_ENDPOINT_OWNER=/api/owner
+REACT_APP_ENDPOINT_PROPERTYIMAGE=/api/propertyImage
+REACT_APP_ENDPOINT_PROPERTYTRACE=/api/propertyTrace
