--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.15.0",
     "@mui/x-date-pickers-pro": "^8.15.0",
+    "@reduxjs/toolkit": "^2.9.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -18,8 +19,10 @@
     "react-burger-menu": "^3.1.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.93.2",
     "sweetalert2": "^11.26.3",
     "web-vitals": "^2.1.4"
