--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ REACT_APP_ENDPOINT_PROPERTY=/api/property
 REACT_APP_ENDPOINT_OWNER=/api/owner
 REACT_APP_ENDPOINT_PROPERTYIMAGE=/api/propertyImage
 REACT_APP_ENDPOINT_PROPERTYTRACE=/api/propertyTrace
+REACT_APP_ENDPOINT_USER=/api/user
