--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ REACT_APP_FRONTEND_URL=http://localhost:3001
 # Endpoints relativos del backend (ajusta el casing según tu API)
 REACT_APP_ENDPOINT_LOGIN=/api/auth/login
 REACT_APP_ENDPOINT_REGISTER=/api/auth/register
+REACT_APP_ENDPOINT_REFRESH=/api/auth/refresh
 REACT_APP_ENDPOINT_PROPERTY=/api/property
 REACT_APP_ENDPOINT_OWNER=/api/owner
 # Usa uno de los dos, según tu backend: /api/propertyimage o /api/propertyImage
