--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ REACT_APP_ENDPOINT_OWNER=/api/owner
 REACT_APP_ENDPOINT_PROPERTYIMAGE=/api/propertyImage
 REACT_APP_ENDPOINT_PROPERTYTRACE=/api/propertyTrace
 REACT_APP_ENDPOINT_USER=/api/user
+REACT_APP_ENDPOINT_PASSWORD=/api/password
