--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ REACT_APP_ENDPOINT_PROPERTYIMAGE=/api/propertyimage
 # Usa uno de los dos, seg√∫n tu backend: /api/propertytrace o /api/propertyTrace
 REACT_APP_ENDPOINT_PROPERTYTRACE=/api/propertytrace
 
+# ContraseÒas (base). El frontend usar· /recover y /update sobre esta base
+REACT_APP_ENDPOINT_PASSWORD=/password
+
 # Notas:
 # - Cambia las rutas para que coincidan exactamente con tu backend.
 # - Si modificas este archivo, ren√≥mbralo a ".env" antes de ejecutar `npm start`.
