--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "realestate.app",
+  "homepage": "https://jorgelmunozp.github.io/realestate.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -29,6 +30,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^8.17.1"
+    "ajv": "^8.17.1",
+    "gh-pages": "^6.3.0"
   }
 }
