--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT=3000
 # REACT_APP_FRONTEND_URL=http://localhost:3000
 
 #PROD
-REACT_APP_BACKEND_URL=https://realestate-z7jb.onrender.com/
+REACT_APP_BACKEND_URL=https://realestate-api-r76f.onrender.com
 REACT_APP_FRONTEND_URL=https://jorgelmunozp.github.io/realestate.app
 
 #ENDPOINTS
