--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ PORT=3000
 
 #DEV
 # REACT_APP_BACKEND_URL=http://localhost:5235
-# REACT_APP_FRONTEND_URL=http://localhost:3000
+# REACT_APP_FRONTEND_BASEPATH=/
 
 #PROD
 REACT_APP_BACKEND_URL=https://realestate-api-r76f.onrender.com
-REACT_APP_FRONTEND_URL=https://jorgelmunozp.github.io/realestate.app
+REACT_APP_FRONTEND_BASEPATH=/realestate.app
 
 #ENDPOINTS
 REACT_APP_ENDPOINT_PROPERTY=/api/property
