--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
-PORT=3000
-
 #DEV
-# REACT_APP_BACKEND_URL=http://localhost:5235
+PORT=3001
+REACT_APP_BACKEND_URL=http://localhost:5235
 # REACT_APP_FRONTEND_BASEPATH=/
 
 #PROD
-REACT_APP_BACKEND_URL=https://realestate-api-r76f.onrender.com
+# REACT_APP_BACKEND_URL=https://realestate-api-r76f.onrender.com
 REACT_APP_FRONTEND_BASEPATH=/realestate.app
 
 #ENDPOINTS
