--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
 #DEV
-PORT=3001
-REACT_APP_BACKEND_URL=http://localhost:5235
-# REACT_APP_FRONTEND_BASEPATH=
+# PORT=3001
+# REACT_APP_BACKEND_URL=http://localhost:5235
 
 #PROD
-# REACT_APP_BACKEND_URL=https://realestate-api-r76f.onrender.com
-# REACT_APP_FRONTEND_BASEPATH=/realestate.app
+REACT_APP_BACKEND_URL=https://realestate-api-r76f.onrender.com
+REACT_APP_FRONTEND_BASEPATH=/realestate.app         #gh-pages
 
 #ENDPOINTS
 REACT_APP_ENDPOINT_PROPERTY=/api/property
