--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 
 #PROD
 REACT_APP_BACKEND_URL=https://realestate-api-r76f.onrender.com
-REACT_APP_FRONTEND_BASEPATH=/realestate.app         #gh-pages
+REACT_APP_FRONTEND_BASEPATH=/realestate.app
 
 #ENDPOINTS
 REACT_APP_ENDPOINT_PROPERTY=/api/property
